--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     
     <div id="app">
-        <ul>
+        <ul v-show="emails.length == 10">
             <template v-for="(email, index) in emails">
                <li>{{ email }}</li> 
             </template>
